fix(alert): add dark mode support for alert component

--- a/packages/styles/_generated/pine/components/pds-alert/pds-alert.tokens.scss
+++ b/packages/styles/_generated/pine/components/pds-alert/pds-alert.tokens.scss
@@ -44,3 +44,46 @@
   --pine-alert-color-warning-link-hover: var(--pine-color-yellow-950);
   --pine-alert-color-warning-text: var(--pine-color-yellow-950);
 }
+
+:host-context([data-theme='dark']) {
+  --pine-alert-color-background: var(--pine-color-grey-800);
+  --pine-alert-color-border: var(--pine-color-grey-600);
+  --pine-alert-color-dismiss: var(--pine-color-grey-200);
+  --pine-alert-color-dismiss-hover: var(--pine-color-grey-700);
+  --pine-alert-color-icon: var(--pine-color-grey-300);
+  --pine-alert-color-link: var(--pine-color-grey-200);
+  --pine-alert-color-link-hover: var(--pine-color-grey-050);
+  --pine-alert-color-text: var(--pine-color-grey-100);
+  --pine-alert-color-danger-background: var(--pine-color-red-900);
+  --pine-alert-color-danger-border: var(--pine-color-red-800);
+  --pine-alert-color-danger-dismiss: var(--pine-color-red-200);
+  --pine-alert-color-danger-dismiss-hover: var(--pine-color-red-800);
+  --pine-alert-color-danger-icon: var(--pine-color-red-400);
+  --pine-alert-color-danger-link: var(--pine-color-red-300);
+  --pine-alert-color-danger-link-hover: var(--pine-color-red-200);
+  --pine-alert-color-danger-text: var(--pine-color-red-100);
+  --pine-alert-color-info-background: var(--pine-color-blue-900);
+  --pine-alert-color-info-border: var(--pine-color-blue-800);
+  --pine-alert-color-info-dismiss: var(--pine-color-blue-200);
+  --pine-alert-color-info-dismiss-hover: var(--pine-color-blue-800);
+  --pine-alert-color-info-icon: var(--pine-color-blue-400);
+  --pine-alert-color-info-link: var(--pine-color-blue-300);
+  --pine-alert-color-info-link-hover: var(--pine-color-blue-200);
+  --pine-alert-color-info-text: var(--pine-color-blue-100);
+  --pine-alert-color-success-background: var(--pine-color-green-900);
+  --pine-alert-color-success-border: var(--pine-color-green-800);
+  --pine-alert-color-success-dismiss: var(--pine-color-green-200);
+  --pine-alert-color-success-dismiss-hover: var(--pine-color-green-800);
+  --pine-alert-color-success-icon: var(--pine-color-green-400);
+  --pine-alert-color-success-link: var(--pine-color-green-300);
+  --pine-alert-color-success-link-hover: var(--pine-color-green-200);
+  --pine-alert-color-success-text: var(--pine-color-green-100);
+  --pine-alert-color-warning-background: var(--pine-color-yellow-900);
+  --pine-alert-color-warning-border: var(--pine-color-yellow-800);
+  --pine-alert-color-warning-dismiss: var(--pine-color-yellow-200);
+  --pine-alert-color-warning-dismiss-hover: var(--pine-color-yellow-800);
+  --pine-alert-color-warning-icon: var(--pine-color-yellow-400);
+  --pine-alert-color-warning-link: var(--pine-color-yellow-300);
+  --pine-alert-color-warning-link-hover: var(--pine-color-yellow-200);
+  --pine-alert-color-warning-text: var(--pine-color-yellow-100);
+}
